[package]
name = "galvanic-mock-lib"
version = "0.2.0"
authors = ["Christopher Bacher <mindsbackyard@gmail.com>"]

description = "The support library for galvanic-mock."

homepage = "https://github.com/mindsbackyard/galvanic-mock-lib"
repository = "https://github.com/mindsbackyard/galvanic-mock-lib"
documentation = "https://docs.rs/galvanic-mock-lib"

readme = "Readme.md"

license = "Apache-2.0"

keywords = ["test", "mocking", "TDD", "BDD"]
categories = ["development-tools::testing"]

[badges]
travis-ci = { repository = "mindsbackyard/galvanic-mock-lib" }

[dependencies]
galvanic-assert = { version = "^0.8", optional = true }

[features]
galvanic_assert_integration = ["galvanic-assert"]
